--- a/aula1/css/style.css
+++ b/aula1/css/style.css
@@ -49,7 +49,7 @@ body {
 	height: 100%;
 	font-family: 'PT Sans', sans-serif;
 	height: 100vh;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 
@@ -62,7 +62,7 @@ main {
 
 section {
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -73,10 +73,11 @@ section > .content {
 	background: none;
 	width: 84%;
 	/*padding: 8%;*/
-	max-width: 900px;
+	max-width: 700px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin: 20px 0px;
 }
 
 section > .content > h1 {
@@ -88,21 +89,20 @@ section > .content > h1 {
 	line-height: 1.3;
 }
 
-section > .content > p {
+section > .content  p {
 	line-height: 1.5;
-	max-width: 620px;
 	width: 100%;
 	text-align: left;
 	margin-top: 0px;
 	font-size: 22px;
 }
 
-section > .content > p > em {
+section > .content  p > em {
 	position: relative;
 	z-index: 2;
 }
 
-section > .content > p > em::before {
+section > .content  p > em::before {
 	content: '';
 	position: absolute;
 	z-index: -1;
@@ -120,7 +120,7 @@ section code {
 	font-size: 18px;
 	color: #1e1e1e;
 	width: 100%;
-	max-width: 620px;
+	max-width: 700px;
 	padding: 10px;
 	margin: 10px 0px;
 	border-left: 8px solid #ccc;
@@ -132,10 +132,10 @@ section code {
 		font-size: 30px;
 	}
 	section > .content > p {
-		font-size: 16px;
+		font-size: 18px;
 	}
 	section > .content > code {
-		font-size: 16px;
+		font-size: 18px;
 	}
 }
 
@@ -162,7 +162,7 @@ section:nth-of-type(even) {
 
 }
 
-section .up, section .down {
+section .up, section .down, section .left, section .right {
 	opacity: 0;
 	position: absolute;
 	font-size: 20px;
@@ -187,7 +187,11 @@ section:last-of-type .down {
 	display: none;
 }
 
-section .up span, section .down span {
+section:first-of-type .left, section:first-of-type .right, section:last-of-type .left, section:last-of-type .right {
+	display: flex;
+}
+
+section .up span, section .down span, section .left span, section .right span {
 	display: flex;
 	width: 50px;
 	height: 50px;
@@ -204,8 +208,18 @@ section .up {
 	top: 0px;
 }
 
+section .left {
+	top: 0px;
+	transform: rotate(-90deg);
+}
+
 section .down {
 	transform: rotate(180deg);
+	bottom: 0px;
+}
+
+section .right {
+	transform: rotate(90deg);
 	bottom: 0px;
 }
 
@@ -236,6 +250,15 @@ section .up span, section .down span {
 	color: #0087cc;
 }
 
+
+@media screen and (max-width: 415px), screen and (max-height: 415px) {
+	body {
+		overflow: auto;
+	}
+	section .up, section .down {
+		display: none;
+	}
+}
 
 
 
