--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,40 @@
+@keyframes pulseY {
+	0% {
+		transform: translateY(-2px);
+	}
+	70% {
+		transform: translateY(2px);
+	}
+	100% {
+		transform: translateY(2px);
+	}
+
+}
+
+@keyframes pulseX {
+	0% {
+		transform: translateX(2px);
+	}
+	70% {
+		transform: translateX(-2px);
+	}
+	100% {
+		transform: translateX(-2px);
+	}
+}
+
+@keyframes pulseXleft {
+	0% {
+		transform: translateX(-2px);
+	}
+	70% {
+		transform: translateX(2px);
+	}
+	100% {
+		transform: translateX(2px);
+	}
+}
+
 html, body, * {
   margin: 0;
   padding: 0;
@@ -13,6 +50,7 @@ body {
 	height: 100%;
 	font-family: 'PT Sans', sans-serif;
 	height: 100vh;
+	background: #331771;
 	/*overflow: hidden;*/
 }
 
@@ -58,7 +96,7 @@ section > .content  p {
 	width: 100%;
 	text-align: left;
 	margin-top: 0px;
-	font-size: 22px;
+	font-size: 20px;
 }
 
 section > .content  p > em {
@@ -101,20 +139,7 @@ section:nth-of-type(even) {
 	color: #331771;
 }
 
-@keyframes pulse {
-	0% {
-		transform: translateY(-2px);
-	}
-	70% {
-		transform: translateY(2px);
-	}
-	100% {
-		transform: translateY(2px);
-	}
-
-}
-
-section .up, section .down, section .left, section .right {
+section .up, section .down {
 	opacity: 0;
 	position: absolute;
 	font-size: 20px;
@@ -131,7 +156,7 @@ section:first-of-type .up {
 	display: none;
 }
 
-section:first-of-type .down, section .left, section .right {
+section:first-of-type .down {
 	opacity: 1;
 }
 
@@ -139,11 +164,11 @@ section:last-of-type .down {
 	display: none;
 }
 
-section:first-of-type .left, section:first-of-type .right, section:last-of-type .left, section:last-of-type .right {
-	display: flex;
+section:last-of-type {
+	padding-bottom: 50px;
 }
 
-section .up span, section .down span, section .left span, section .right span {
+section .up span, section .down span {
 	display: flex;
 	width: 50px;
 	height: 50px;
@@ -160,23 +185,13 @@ section .up {
 	top: 0px;
 }
 
-section .left {
-	top: 0px;
-	transform: rotate(-90deg);
-}
-
 section .down {
 	bottom: 0px;
-}
-
-section .down span {
-	display: block;
 	transform: rotate(180deg);
 }
 
-section .right {
-	transform: rotate(90deg);
-	bottom: 0px;
+section .down span {
+	display: flex;
 }
 
 /* pinta as setas de up e down das filhas ímpares */
@@ -193,7 +208,61 @@ section:nth-of-type(even) .up span, section:nth-of-type(even) .down span {
 
 section .up span, section .down span {
 	cursor: pointer;
-	animation: pulse 0.5s linear 2s infinite alternate;
+	animation: pulseY 0.5s linear 2s infinite alternate;
+}
+
+/*buttons*/
+.next {
+	display: block;
+	width: 100vw;
+	text-align: right;
+	padding: 20px 50px 20px 20px;
+	text-decoration: none;
+	background: #331771;
+	color: #afeaed;
+	text-align: right;
+	font-family: 'PT Serif', cursive;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	line-height: 1.3;
+	position: absolute;
+	right: 0px;
+	border: 0px solid #331771;
+	margin-top: 20px;
+	bottom: 0px;
+}
+.next::after {
+	content: '→';
+	display: inline-block;
+	position: absolute;
+	top: 21px;
+	right: 20px;
+	animation: pulseX 0.5s linear 2s infinite alternate;
+}
+
+.prev {
+	display: block;
+	padding: 20px 20px 20px 50px;
+	text-decoration: none;
+	background: #331771;
+	color: #afeaed;
+	text-align: center;
+	font-family: 'PT Serif', cursive;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	line-height: 1.3;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+}
+.prev::after {
+	content: '←';
+	display: inline-block;
+	position: absolute;
+	top: 21px;
+	left: 20px;
+	transform: translateX(0px);
+	animation: pulseXleft 0.5s linear 2s infinite alternate;
 }
 
 /*colors*/
@@ -215,10 +284,10 @@ section .up span, section .down span {
 		font-size: 30px;
 	}
 	section > .content > p {
-		font-size: 18px;
+		font-size: 16px;
 	}
 	section > .content > code {
-		font-size: 18px;
+		font-size: 16px;
 	}
 }
 
@@ -228,6 +297,9 @@ section .up span, section .down span {
 	}
 	section .up, section .down {
 		display: none;
+	}
+	.next {
+		width: 100%;
 	}
 }
 
