--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 	font-family: 'PT Sans', sans-serif;
 	height: 100vh;
 	background: #331771;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 
