--- a/css/style.css
+++ b/css/style.css
@@ -317,6 +317,23 @@ section .up span, section .down span {
 	animation: pulseXleft 0.5s linear 2s infinite alternate;
 }
 
+.gif-no {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	   -moz-transform: translate(-50%, -50%);
+	    -ms-transform: translate(-50%, -50%);
+	     -o-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: bottom center;
+	display: none;
+	z-index: 5;
+}
+
 /*colors*/
 .tag {
 	color: #ff7b29;
