--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ section .up span, section .down span {
 	        transform: translate(-50%, -50%);
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	object-fit: contain;
 	object-position: bottom center;
 	display: none;
 	z-index: 5;
